--- a/VMP-Mod.csproj
+++ b/VMP-Mod.csproj
@@ -305,6 +305,8 @@
     <Compile Include="MapSharing\VPlusMapSync.cs" />
     <Compile Include="MapSharing\ZPackageExtensions.cs" />
     <Compile Include="Patches\ChestSizePatch.cs" />
+    <Compile Include="Patches\MapDetails.cs" />
+    <Compile Include="Patches\CraftingPatches.cs" />
     <Compile Include="Patches\InventoryPatch.cs" />
     <Compile Include="Plugin.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
