Stage Inventory patch

--- a/VMP-Mod.csproj
+++ b/VMP-Mod.csproj
@@ -305,6 +305,9 @@
     <Compile Include="MapSharing\VPlusMapSync.cs" />
     <Compile Include="MapSharing\ZPackageExtensions.cs" />
     <Compile Include="Patches\ChestSizePatch.cs" />
+    <Compile Include="Patches\Deconstruct.cs" />
+    <Compile Include="Patches\Inventory.cs" />
+    <Compile Include="Patches\InventoryGUI.cs" />
     <Compile Include="Patches\ShowContainerContentsPatch.cs" />
     <Compile Include="Patches\ItemData.cs" />
     <Compile Include="Patches\MapDetails.cs" />
