Make sure you can put extensions further away too..

--- a/VMP-Mod.csproj
+++ b/VMP-Mod.csproj
@@ -314,6 +314,7 @@
     <Compile Include="Patches\CraftingPatches.cs" />
     <Compile Include="Patches\InventoryPatch.cs" />
     <Compile Include="Patches\SortUtils.cs" />
+    <Compile Include="Patches\StationExtension.cs" />
     <Compile Include="Plugin.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
