--- a/VMP-Mod.csproj
+++ b/VMP-Mod.csproj
@@ -297,6 +297,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AuthConfig.cs" />
     <Compile Include="MapSharing\GameObjectAssistant.cs" />
     <Compile Include="MapSharing\ListExtensions.cs" />
     <Compile Include="MapSharing\Minimap.cs" />
