--- a/VMP-Mod.csproj
+++ b/VMP-Mod.csproj
@@ -297,6 +297,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Utils.cs" />
     <Compile Include="MapSharing\GameObjectAssistant.cs" />
     <Compile Include="MapSharing\ListExtensions.cs" />
     <Compile Include="MapSharing\Minimap.cs" />
@@ -307,6 +308,7 @@
     <Compile Include="MapSharing\MapSync.cs" />
     <Compile Include="MapSharing\ZPackageExtensions.cs" />
     <Compile Include="Patches\ChestSizePatch.cs" />
+    <Compile Include="Patches\AutoStorePatch.cs" />
     <Compile Include="Patches\SignPatches.cs" />
     <Compile Include="Patches\WearNTear.cs" />
     <Compile Include="Patches\GamePatches.cs" />
