--- a/VMP-Mod.csproj
+++ b/VMP-Mod.csproj
@@ -10,10 +10,12 @@
     <RootNamespace>VMP_Mod</RootNamespace>
     <AssemblyName>VMP-Mod</AssemblyName>
     <TargetFrameworkVersion>v4.6.2</TargetFrameworkVersion>
+    <LangVersion>8.0</LangVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -299,6 +301,9 @@
   <ItemGroup>
     <Compile Include="EAQS\EAQS.cs" />
     <Compile Include="EAQS\QuickAccessBar.cs" />
+    <Compile Include="Patches\ClientPatches.cs" />
+    <Compile Include="Patches\ServerPatches.cs" />
+    <Compile Include="Patches\WorldPatches.cs" />
     <Compile Include="Utils.cs" />
     <Compile Include="MapSharing\GameObjectAssistant.cs" />
     <Compile Include="MapSharing\ListExtensions.cs" />
