--- a/VMP-Mod.csproj
+++ b/VMP-Mod.csproj
@@ -385,6 +385,7 @@
   <ItemGroup>
     <Compile Include="EAQS\EAQS.cs" />
     <Compile Include="EAQS\QuickAccessBar.cs" />
+    <Compile Include="Patches\ClockPatch.cs" />
     <Compile Include="Patches\PlantGrowth.cs" />
     <Compile Include="Patches\ClientPatches.cs" />
     <Compile Include="Patches\ListPatches.cs" />
