Precise Rotation Patch

--- a/VMP-Mod.csproj
+++ b/VMP-Mod.csproj
@@ -386,6 +386,7 @@
   <ItemGroup>
     <Compile Include="EAQS\EAQS.cs" />
     <Compile Include="EAQS\QuickAccessBar.cs" />
+    <Compile Include="Patches\PreciseRotation.cs" />
     <Compile Include="Patches\InventoryHUD.cs" />
     <Compile Include="Patches\ClockPatch.cs" />
     <Compile Include="Patches\PlantGrowth.cs" />
