--- a/VMP-Mod.csproj
+++ b/VMP-Mod.csproj
@@ -126,8 +126,7 @@
       <Private>False</Private>
     </Reference>
     <Reference Include="ServerSync">
-      <HintPath>..\ServerSync\bin\Debug\ServerSync.dll</HintPath>
-      <Private>True</Private>
+      <HintPath>..\..\source\repos\ServerSync\bin\Debug\ServerSync.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
