--- a/VMP-Mod.csproj
+++ b/VMP-Mod.csproj
@@ -9,13 +9,14 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>VMP_Mod</RootNamespace>
     <AssemblyName>VMP-Mod</AssemblyName>
-    <TargetFrameworkVersion>v4.6.2</TargetFrameworkVersion>
-    <LangVersion>8.0</LangVersion>
+    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
+    <LangVersion>9</LangVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
     <TargetFrameworkProfile />
+    <Nullable>enable</Nullable>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -52,10 +53,6 @@
       <HintPath>..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\Valheim\valheim_Data\Managed\publicized_assemblies\assembly_lux_publicized.dll</HintPath>
       <Private>False</Private>
     </Reference>
-    <Reference Include="assembly_postprocessing_publicized">
-      <HintPath>..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\Valheim\valheim_Data\Managed\publicized_assemblies\assembly_postprocessing_publicized.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
     <Reference Include="assembly_simplemeshcombine_publicized">
       <HintPath>..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\Valheim\valheim_Data\Managed\publicized_assemblies\assembly_simplemeshcombine_publicized.dll</HintPath>
       <Private>False</Private>
@@ -88,47 +85,38 @@
       <Private>False</Private>
     </Reference>
     <Reference Include="CraftFromContainers, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null">
-      <HintPath>..\..\source\repos\Aeden\CraftFromContainers\bin\Release\net462\CraftFromContainers.dll</HintPath>
+      <HintPath>Libs\CraftFromContainers.dll</HintPath>
     </Reference>
     <Reference Include="HarmonyXInterop">
       <HintPath>..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\Valheim\BepInEx\core\HarmonyXInterop.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="MMHOOK_assembly_googleanalytics, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null">
-      <HintPath>..\..\..\..\Program Files (x86)\Steam\steamapps\common\Valheim-jotunn\BepInEx\plugins\MMHOOK\MMHOOK_assembly_googleanalytics.dll</HintPath>
-      <Private>False</Private>
+      <HintPath>Libs\MMHOOK_assembly_googleanalytics.dll</HintPath>
     </Reference>
     <Reference Include="MMHOOK_assembly_guiutils, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null">
-      <HintPath>..\..\..\..\Program Files (x86)\Steam\steamapps\common\Valheim-jotunn\BepInEx\plugins\MMHOOK\MMHOOK_assembly_guiutils.dll</HintPath>
-      <Private>False</Private>
+      <HintPath>Libs\MMHOOK_assembly_guiutils.dll</HintPath>
     </Reference>
     <Reference Include="MMHOOK_assembly_lux, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null">
-      <HintPath>..\..\..\..\Program Files (x86)\Steam\steamapps\common\Valheim-jotunn\BepInEx\plugins\MMHOOK\MMHOOK_assembly_lux.dll</HintPath>
-      <Private>False</Private>
+      <HintPath>Libs\MMHOOK_assembly_lux.dll</HintPath>
     </Reference>
     <Reference Include="MMHOOK_assembly_postprocessing, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null">
-      <HintPath>..\..\..\..\Program Files (x86)\Steam\steamapps\common\Valheim-jotunn\BepInEx\plugins\MMHOOK\MMHOOK_assembly_postprocessing.dll</HintPath>
-      <Private>False</Private>
+      <HintPath>Libs\MMHOOK_assembly_postprocessing.dll</HintPath>
     </Reference>
     <Reference Include="MMHOOK_assembly_simplemeshcombine, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null">
-      <HintPath>..\..\..\..\Program Files (x86)\Steam\steamapps\common\Valheim-jotunn\BepInEx\plugins\MMHOOK\MMHOOK_assembly_simplemeshcombine.dll</HintPath>
-      <Private>False</Private>
+      <HintPath>Libs\MMHOOK_assembly_simplemeshcombine.dll</HintPath>
     </Reference>
     <Reference Include="MMHOOK_assembly_steamworks, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null">
-      <HintPath>..\..\..\..\Program Files (x86)\Steam\steamapps\common\Valheim-jotunn\BepInEx\plugins\MMHOOK\MMHOOK_assembly_steamworks.dll</HintPath>
-      <Private>False</Private>
+      <HintPath>Libs\MMHOOK_assembly_steamworks.dll</HintPath>
     </Reference>
     <Reference Include="MMHOOK_assembly_sunshafts, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null">
-      <HintPath>..\..\..\..\Program Files (x86)\Steam\steamapps\common\Valheim-jotunn\BepInEx\plugins\MMHOOK\MMHOOK_assembly_sunshafts.dll</HintPath>
-      <Private>False</Private>
+      <HintPath>Libs\MMHOOK_assembly_sunshafts.dll</HintPath>
     </Reference>
     <Reference Include="MMHOOK_assembly_utils, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null">
-      <HintPath>..\..\..\..\Program Files (x86)\Steam\steamapps\common\Valheim-jotunn\BepInEx\plugins\MMHOOK\MMHOOK_assembly_utils.dll</HintPath>
-      <Private>False</Private>
+      <HintPath>Libs\MMHOOK_assembly_utils.dll</HintPath>
     </Reference>
     <Reference Include="MMHOOK_assembly_valheim, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null">
-      <HintPath>..\..\..\..\Program Files (x86)\Steam\steamapps\common\Valheim-jotunn\BepInEx\plugins\MMHOOK\MMHOOK_assembly_valheim.dll</HintPath>
-      <Private>False</Private>
+      <HintPath>Libs\MMHOOK_assembly_valheim.dll</HintPath>
     </Reference>
     <Reference Include="Mono.Cecil">
       <HintPath>..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\Valheim\BepInEx\core\Mono.Cecil.dll</HintPath>
@@ -162,8 +150,8 @@
       <HintPath>..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\Valheim\BepInEx\core\MonoMod.Utils.dll</HintPath>
       <Private>False</Private>
     </Reference>
-    <Reference Include="ServerSync">
-      <HintPath>..\..\source\repos\ServerSync\bin\Debug\ServerSync.dll</HintPath>
+    <Reference Include="ServerSync, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null">
+      <HintPath>Libs\ServerSync.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
