--- a/VMP-Mod.csproj
+++ b/VMP-Mod.csproj
@@ -161,7 +161,7 @@
     </ItemGroup>
     <ItemGroup>
       <Content Include="Libs\ServerSync.dll">
-        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </Content>
     </ItemGroup>
     <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
