--- a/VMP-Mod.csproj
+++ b/VMP-Mod.csproj
@@ -10,7 +10,7 @@
         <RootNamespace>OdinQOL</RootNamespace>
         <AssemblyName>OdinQOL</AssemblyName>
         <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
-        <LangVersion>9</LangVersion>
+        <LangVersion>10</LangVersion>
         <FileAlignment>512</FileAlignment>
         <Deterministic>true</Deterministic>
         <NuGetPackageImportStamp>
@@ -131,15 +131,6 @@
         <Compile Include="Patches\ServerPatches.cs" />
         <Compile Include="Patches\WorldPatches.cs" />
         <Compile Include="Utilities.cs" />
-        <Compile Include="MapSharing\GameObjectAssistant.cs" />
-        <Compile Include="MapSharing\ListExtensions.cs" />
-        <Compile Include="MapSharing\Minimap.cs" />
-        <Compile Include="MapSharing\RPCQueue.cs" />
-        <Compile Include="MapSharing\VMPAck.cs" />
-        <Compile Include="MapSharing\DataObjects.cs" />
-        <Compile Include="MapSharing\MapPinSync.cs" />
-        <Compile Include="MapSharing\MapSync.cs" />
-        <Compile Include="MapSharing\ZPackageExtensions.cs" />
         <Compile Include="Patches\ChestSizePatch.cs" />
         <Compile Include="Patches\AutoStorePatch.cs" />
         <Compile Include="Patches\SignPatches.cs" />
@@ -160,9 +151,11 @@
         <None Include="packages.config" />
     </ItemGroup>
     <ItemGroup>
+      <Content Include=".gitignore" />
       <Content Include="Libs\ServerSync.dll">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </Content>
+      <Content Include="LICENSE.txt" />
     </ItemGroup>
     <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
     <Import Project="packages\ILRepack.Lib.MSBuild.Task.2.0.18.2\build\ILRepack.Lib.MSBuild.Task.targets" Condition="Exists('packages\ILRepack.Lib.MSBuild.Task.2.0.18.2\build\ILRepack.Lib.MSBuild.Task.targets')" />
