--- a/VMP-Mod.csproj
+++ b/VMP-Mod.csproj
@@ -138,13 +138,15 @@
         <Compile Include="Patches\Inventory.cs" />
         <Compile Include="Patches\InventoryGUI.cs" />
         <Compile Include="Patches\CraftingPatches.cs" />
-        <Compile Include="Patches\StationExtension.cs" />
         <Compile Include="Plugin.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
         <Compile Include="Utilities\Compatibility\WardIsLove\WardIsLovePlugin.cs" />
         <Compile Include="Utilities\Compatibility\WardIsLove\WardMonoscript.cs" />
         <Compile Include="Utilities\Compatibility\WILCompat.cs" />
         <Compile Include="Utilities\Configs\CFCConfigs.cs" />
+        <Compile Include="Utilities\Configs\ChestSizeConfigs.cs" />
+        <Compile Include="Utilities\Configs\CraftingConfigs.cs" />
+        <Compile Include="Utilities\Configs\MapDetailConfigs.cs" />
         <Compile Include="Utilities\Utilities.cs" />
     </ItemGroup>
     <ItemGroup>
