--- a/VMP-Mod.csproj
+++ b/VMP-Mod.csproj
@@ -195,6 +195,7 @@
         <PostBuildEvent>copy "$(TargetDir)OdinQOL.dll" "C:\Users\crypt\AppData\Roaming\r2modmanPlus-local\Valheim\profiles\OdinQOL test\BepInEx\plugins\OdinPlus-OdinsQOL\OdinQOL.dll</PostBuildEvent>
     </PropertyGroup>-->
     <Target Name="Copy" AfterTargets="ILRepack">
-        <Exec Command="copy /Y &quot;$(TargetDir)$(AssemblyName).dll&quot; &quot;C:\Users\crypt\AppData\Roaming\r2modmanPlus-local\Valheim\profiles\OdinQOL test\BepInEx\plugins\OdinPlus-OdinsQOL\$(AssemblyName).dll&quot;" />
+        <!--<Exec Command="copy /Y &quot;$(TargetDir)$(AssemblyName).dll&quot; &quot;C:\Users\crypt\AppData\Roaming\r2modmanPlus-local\Valheim\profiles\OdinQOL test\BepInEx\plugins\OdinPlus-OdinsQOL\$(AssemblyName).dll&quot;" />-->
+        <!--<Exec Command="copy /Y &quot;$(TargetDir)$(AssemblyName).dll&quot; &quot;C:\Users\crypt\AppData\Roaming\r2modmanPlus-local\Valheim\profiles\PermaTesting\BepInEx\plugins\OdinPlus-OdinsQOL\$(AssemblyName).dll&quot;" />-->
     </Target>
 </Project>
