For the V+ bois, also server sync update. We cool now?

--- a/VMP-Mod.csproj
+++ b/VMP-Mod.csproj
@@ -181,7 +181,7 @@
         <Content Include="Libs\ServerSync.dll">
             <CopyToOutputDirectory>Always</CopyToOutputDirectory>
         </Content>
-        <Content Include="LICENSE.txt" />
+        <Content Include="LICENSE.md" />
         <Content Include="README.md" />
     </ItemGroup>
     <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
