While I'm at it. Change version check.

--- a/VMP-Mod.csproj
+++ b/VMP-Mod.csproj
@@ -168,6 +168,7 @@
         <Compile Include="Utilities\Configs\WorldPatchConfigs.cs" />
         <Compile Include="Utilities\DragControl.cs" />
         <Compile Include="Utilities\Utilities.cs" />
+        <Compile Include="Utilities\VersionHandshake.cs" />
     </ItemGroup>
     <ItemGroup>
         <EmbeddedResource Include="Assets\Bundles\map-pin-ui" />
